# FastAPI_Python_ReactTalon_PostGres

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  DOCUMENTATION.md  ai.py  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  query_cache.json  readme.md  requirements.txt  schemas.py  tmpclaude-f6cb-cwd
.claude/: settings.local.json
ai/: __init__.py  cache.py  db_queries.py  detectors.py  llm.py  models.py  query_parser.py
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
routers/: __init__.py  ai_endpoints.py  health.py  users.py
utils/: __init__.py  file_handlers.py  validators.py
